--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,19 +5,13 @@ homepage: https://github.com/Eagle6789/flutter_file_utils
 author: Mohamed Naga <me.dev6789@gmail.com>
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  simple_permissions: ^0.1.9
-  path: '>=1.5.1 <3.0.0'
-  path_provider: '>=0.4.0 <3.0.0'
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-dependency_overrides:
+  permission_handler: ^10.0.0
+  path: ^1.8.2
+  path_provider: ^2.0.11
   flutter_file_utils:
     path: ../
