--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,16 @@
 name: flutter_file_utils
 description: Helper tools for managing files on Android
 version: 0.2.0
-author: Mohamed Naga <me49544@gmail.com>
+#author: Mohamed Naga <me49544@gmail.com>
 homepage: https://github.com/nagakm/flutter_file_utils
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  path: ">=1.5.1 <3.0.0"
-  path_provider: ">=1.5.1 <3.0.0"
-  package_info: ">=0.4.0 <3.0.0"
+  path: ^1.8.2
+  path_provider: ^2.0.11
+  package_info_plus: ^1.4.3+1
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-flutter:
